<?xml version="1.0"?>
<package format="2">
<name>infinitam_ros</name>
<version>0.0.1</version>
<description>The infinitam_ros package</description>
<author email="manhha.hoang@hansrobot.de">Manh Ha Hoang</author>
<maintainer email="manhha.hoang@hansrobot.de">Manh Ha Hoang</maintainer>
  <author>Manh Ha Hoang</author>
<license>HansRobot</license>
<buildtool_depend>catkin</buildtool_depend>
<depend>cmake_modules</depend>
<depend>cv_bridge</depend>
<depend>image_transport</depend>
<depend>message_generation</depend>
<depend>message_filters</depend>
<depend>roscpp</depend>
<depend>roslib</depend>
<depend>sensor_msgs</depend>
<depend>std_msgs</depend>
<depend>tf_conversions</depend>
<depend>tf2</depend>
<depend>tf2_ros</depend>
<depend>tf2_geometry_msgs</depend>
<export>

</export>
</package>
